# cordova-plugin-eos

./: .eslintrc.yml  .genvid-agent.json  .gitignore  .npmignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  plan.md  plugin.xml  tsconfig.json
.circleci/: config.yml
.github/workflows/: android.yml  ios.yml
demo/: .gitignore  config.xml  index.html  package-lock.json  package.json
demo/templates/: eos_config.json
docs/: TOC.md
scripts/: EOSSDK-Info.plist  install_eos_framework.js  version-guard.js
sdk-patch/android/Samples/Android/Login/app/src/main/cpp/: native-lib.cpp
sdk-patch/ios/Samples/IOS/Login/Login/EOS/EOSWrapper.mm/: EOSWrapper.mm
src/android/: CordovaEOS.java  build.gradle
src/android/cpp/CordovaEOS/: CMakeLists.txt  CordovaEOS.cpp
src/ios/: CordovaEOS.h  CordovaEOS.m  CordovaEOS.mm  EOSWrapper.h  EOSWrapper.mm  ReservedPlatformOptions.h  ReservedPlatformOptions.mm
tests/: autoTests.js  manualTests.js  package.json  plugin.xml  testAuthService.js  testEcomService.js  testSdkApi.js
types/: index.d.ts
www/: auth.js  ecom.js  eos.js
